jobs/job_60783810/uncert/errors/benchmark_102/solver_2.txt
INFO: Pointer analysis took 0 sec 0 ms
input.cc:40:9: error: cannot assign to variable 'p' with const-qualified type 'const char'
        for (p = s1;;) {
             ~ ^
input.cc:33:13: note: variable 'p' declared const here
        const char p, spanp;
        ~~~~~~~~~~~^
input.cc:41:16: error: cannot assign to variable 'p' with const-qualified type 'const char'
                c = memory1[p++];
                            ~^
input.cc:33:13: note: variable 'p' declared const here
        const char p, spanp;
        ~~~~~~~~~~~^
input.cc:42:9: error: cannot assign to variable 'spanp' with const-qualified type 'const char'
                spanp = s2;
                ~~~~~ ^
input.cc:33:16: note: variable 'spanp' declared const here
        const char p, spanp;
        ~~~~~~~~~~~~~~^~~~~
input.cc:44:27: error: cannot assign to variable 'spanp' with const-qualified type 'const char'
                        if ((sc = memory0[spanp++]) == c)
                                          ~~~~~^
input.cc:33:16: note: variable 'spanp' declared const here
        const char p, spanp;
        ~~~~~~~~~~~~~~^~~~~
4 errors generated.
yWUf2_Ptr2Arr.c:40:9: error: read-only variable is not assignable
        for (p = s1;;) {
             ~ ^
yWUf2_Ptr2Arr.c:41:16: error: read-only variable is not assignable
                c = memory1[p++];
                            ~^
yWUf2_Ptr2Arr.c:42:9: error: read-only variable is not assignable
                spanp = s2;
                ~~~~~ ^
yWUf2_Ptr2Arr.c:44:27: error: read-only variable is not assignable
                        if ((sc = memory0[spanp++]) == c)
                                          ~~~~~^
4 errors generated.
